src/lib/libJKFactory/include/typesf2c.h

typedef float Real;
typedef double DoublePrecision;
typedef struct {
    DoublePrecision real;
    DoublePrecision imag;
} DoubleComplex;
typedef struct {
    Real real;
    Real imag;
} SingleComplex;